--- a/styles/styles5.css
+++ b/styles/styles5.css
@@ -1,7 +1,8 @@
+
 .form{
     padding: 5px;
     background: rgba(28, 125, 237, 0.5);
-    width: 360px;
+    width: 370px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -26,6 +27,7 @@ h1{
 }
 body{
     font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .registerbtn {
     background-color: #a34caf;
