--- a/css/styles9.css
+++ b/css/styles9.css
@@ -1,132 +1,165 @@
 body {
-    color: #FFFFFF;
-    background-color: #3B3F45;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    color: #000000;
+    font-family: 'Delius Unicase', cursive;
+    font-size: 20px;
 }
-
-header {
-    text-align: center;
-    color: #FF8984;
-    background-color: #4A4F56;
-    height: 82px;
-}
+*{transition: all .1s ease-in;}
 
 h1 {
-    font-weight: 700;
-    padding-top: 19px;
-    padding-bottom: 4px;
-    font-size: 24px;
+    text-align: center;
+    margin-top: 120px;
+    font-size: 36px;
 }
 
-main {
-    background-color: #3B3F45;
-}
-
-.forma {
-    margin-top: 20px;
-    max-width: 534px;
+.wrapper {
+    max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
-    height: 270px;
+    margin-top: 80px;
+    margin-bottom: 120px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
 }
 
-li {
-    justify-content: center;
-    height: 45px;
-    background-color: #88839E;
+img {
+    border-radius: 20px;
+    max-width: 100%;
+    height: auto;
 }
 
-li:nth-last-child(even) {
-    background-color: #7A7593;
+/* For 1 gallery */
+
+.gallery-1 div:nth-of-type(4n+2) {
+    grid-column: span 2;
 }
 
-li:hover {
-    background-color: #625E77;
-    border-top: solid 3px;
-    border-bottom: solid 3px;
+.gallery-1 div:nth-of-type(3) {
+    grid-column: span 2;
 }
 
-li:active {
-    background-color: #FF8984;
+/* For 2 gallery */
+
+.gallery-2 div:nth-of-type(6n+3) {
+    grid-column: span 2;
 }
 
-span {
-    vertical-align: middle;
-    font-size: 11px;
+.gallery-2 div:nth-of-type(3n+2) {
+    grid-column: span 2;
 }
 
-input {
-    vertical-align: middle;
-    margin-left: 12px;
-    margin-top: 12px;
-    margin-bottom: 14px;
-    margin-right: 16px;
-    width: 19px;
-    height: 19px;
+/* For 3 galley */
+
+.greed-item1 {
+    grid-area: 1/1/2/2;
 }
 
-* {
-    transition: all .1s ease-in;
+.greed-item2 {
+    grid-area: 1/2/3/3;
 }
 
-.btn {
-    margin-top: 45px;
-    border: none;
-    color: #FF8984;
-    width: 534px;
-    height: 45px;
-    background-color: #4A4F56;
+.greed-item3 {
+    grid-area: 1/3/2/4;
 }
 
-.btn-center {
-    text-align: center;
+.greed-item4 {
+    grid-area: 2/1/3/2;
 }
 
-.btn:hover {
-    opacity: 0.8;
+.greed-item5 {
+    grid-area: 2/3/4/4;
 }
 
-.checkbox {
+.greed-item6 {
+    grid-area: 3/1/5/2;
+}
+
+.greed-item7 {
+    grid-area: 3/2/4/3;
+}
+
+.greed-item8 {
+    grid-area: 4/2/5/4;
+}
+
+.greed-item9 {
+    grid-area: 5/1/6/3;
+}
+
+.greed-item10 {
+    grid-area: 5/3/6/4;
+}
+
+
+/* Text and images */
+.bottom-left {
+    position: absolute;
+    font-family: "Roboto", sans-serif;
+    left: 20px;
+    bottom: 20px;
+    color: white;
+    font-weight: 500;
+    z-index: 5;
+}
+
+.bottom-right {
+    position: absolute;
+    font-family: "Roboto", sans-serif;
+    color: #E0E0E0;
+    right: 20px;
+    bottom: 20px;
+    z-index: 5;
+}
+
+.top-left {
+    position: absolute;
+    top: 20px;
+    left: 20px;
     display: none;
+    opacity: 0.5;
+ 
 }
 
-.fake {
-    margin: 12px 16px 14px 12px;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-color: white;
+.top-right {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: none;
+    opacity: 0.5;
+   
+}
+
+.for-image {
     position: relative;
 }
 
-.fake:before {
+/* Gradient */
+.for-image::before {
     content: "";
     position: absolute;
-    top: 50%;
-    left: 54%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    background: linear-gradient(360deg, #241F24 0%, rgba(91, 91, 91, 0.447552) 34.11%, rgba(187, 186, 192, 0.26) 62.5%);
+    z-index: 1;
+    
+}
+
+.for-image:hover::before {
+    display: none;
+    
+}
+
+.for-image:hover .top-left,
+.for-image:hover .top-right {
     display: block;
-    width: 20px;
-    height: 20px;
-    background: url('../images/Checklist.svg');
-    opacity: 0;
+    cursor: pointer;
 }
 
-.checkbox:checked+.fake:before {
+.top-left:hover {
+    opacity:1;
+}
+
+.top-right:hover {
     opacity: 1;
-}
-
-input[type="checkbox"]:checked+.fake:before {
-    opacity: 1;
-}
-
-input[type="checkbox"]:checked + .fake + label {
-    text-decoration: line-through;
-    color: #9B96AC;
-    display: inline-flex;
-    align-items: center;
-}
-label > span{
-    padding-left: 5px;
 }
