--- a/css/styles9.css
+++ b/css/styles9.css
@@ -1,165 +1,104 @@
-body {
-    color: #000000;
-    font-family: 'Delius Unicase', cursive;
-    font-size: 20px;
-}
-*{transition: all .1s ease-in;}
+@import "/fonts/index.css";
 
-h1 {
-    text-align: center;
-    margin-top: 120px;
-    font-size: 36px;
+body {
+    font-family: 'PT Sans', sans-serif;
+    color: black;
+    font-size: 28px;
 }
 
 .wrapper {
-    max-width: 1170px;
-    margin-left: auto;
+    margin-bottom: 90px;
     margin-right: auto;
-    margin-top: 80px;
-    margin-bottom: 120px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
-}
-
-img {
-    border-radius: 20px;
-    max-width: 100%;
-    height: auto;
-}
-
-/* For 1 gallery */
-
-.gallery-1 div:nth-of-type(4n+2) {
-    grid-column: span 2;
-}
-
-.gallery-1 div:nth-of-type(3) {
-    grid-column: span 2;
-}
-
-/* For 2 gallery */
-
-.gallery-2 div:nth-of-type(6n+3) {
-    grid-column: span 2;
-}
-
-.gallery-2 div:nth-of-type(3n+2) {
-    grid-column: span 2;
-}
-
-/* For 3 galley */
-
-.greed-item1 {
-    grid-area: 1/1/2/2;
-}
-
-.greed-item2 {
-    grid-area: 1/2/3/3;
-}
-
-.greed-item3 {
-    grid-area: 1/3/2/4;
-}
-
-.greed-item4 {
-    grid-area: 2/1/3/2;
-}
-
-.greed-item5 {
-    grid-area: 2/3/4/4;
-}
-
-.greed-item6 {
-    grid-area: 3/1/5/2;
-}
-
-.greed-item7 {
-    grid-area: 3/2/4/3;
-}
-
-.greed-item8 {
-    grid-area: 4/2/5/4;
-}
-
-.greed-item9 {
-    grid-area: 5/1/6/3;
-}
-
-.greed-item10 {
-    grid-area: 5/3/6/4;
-}
-
-
-/* Text and images */
-.bottom-left {
-    position: absolute;
-    font-family: "Roboto", sans-serif;
-    left: 20px;
-    bottom: 20px;
-    color: white;
-    font-weight: 500;
-    z-index: 5;
-}
-
-.bottom-right {
-    position: absolute;
-    font-family: "Roboto", sans-serif;
-    color: #E0E0E0;
-    right: 20px;
-    bottom: 20px;
-    z-index: 5;
-}
-
-.top-left {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    display: none;
-    opacity: 0.5;
- 
-}
-
-.top-right {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: none;
-    opacity: 0.5;
-   
-}
-
-.for-image {
-    position: relative;
-}
-
-/* Gradient */
-.for-image::before {
-    content: "";
-    position: absolute;
+    margin-left: auto;
+    max-width: 1200px;
     width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    background: linear-gradient(360deg, #241F24 0%, rgba(91, 91, 91, 0.447552) 34.11%, rgba(187, 186, 192, 0.26) 62.5%);
-    z-index: 1;
-    
 }
 
-.for-image:hover::before {
-    display: none;
-    
+a {
+    text-decoration: none;
+    color: black;
 }
 
-.for-image:hover .top-left,
-.for-image:hover .top-right {
-    display: block;
-    cursor: pointer;
+a:hover {
+    opacity: 0.6;
 }
 
-.top-left:hover {
-    opacity:1;
+/* Header */
+.navigation {
+    display: flex;
 }
 
-.top-right:hover {
-    opacity: 1;
+.navigation p {
+    margin-top: 29px;
+    font-family: 'Tourney', sans-serif;
+    font-size: 22px;
+}
+
+.navigation nav {
+    margin-left: 50px;
+    margin-top: 30px;
+    font-family: 'Staatliches', sans-serif;
+    font-size: 22px;
+}
+
+.navigation nav>span {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.logo {
+    margin-left: 601px;
+    margin-top: 16px;
+}
+
+/* Main */
+
+.text {
+    margin-top: 40px;
+    line-height: 48px;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.tags {
+    background-color: #DADADA;
+}
+
+/* Introduction */
+
+.introduction {
+    margin-top: 96px;
+}
+
+.begin {
+    font-family: 'Francois One', sans-serif;
+    font-size: 36px;
+}
+
+.chapter {
+    font-family: 'Farro', sans-serif;
+    font-size: 15px;
+    vertical-align: top;
+}
+
+/* Core components */
+.core,
+.react,
+.handling {
+    margin-top: 70px;
+}
+
+.sans-italic {
+    font-family: 'PT Sans italic', sans-serif;
+}
+
+/* React fundamentals */
+.react p {
+    margin-top: 40px;
+}
+
+.weight {
+    font-weight: 700;
 }
